[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.1"
regex = "1.11.1"

[[bin]]
name="day03"
path="Day 03/day03.rs"

[[bin]]
name="day04"
path="Day 04/day04.rs"

[[bin]]
name="day05"
path="Day 05/day05.rs"

[[bin]]
name="day06"
path="Day 06/day06.rs"

[[bin]]
name="day07"
path="Day 07/day07.rs"

[[bin]]
name="day08"
path="Day 08/day08.rs"

[[bin]]
name="day09"
path="Day 09/day09.rs"